--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,11 @@ twitter_username: shevski_
 github_username:  skolyszewski
 
 # Build settings
-theme: riggraz/no-style-please
-# plugins:
-#   - jekyll-feed
+# theme: riggraz/no-style-please
+remote_theme: riggraz/no-style-please
+plugins:
+  - jekyll-remote-theme
+  # - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
