--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,8 @@ github_username:  skolyszewski
 # Build settings
 # theme: riggraz/no-style-please
 remote_theme: riggraz/no-style-please
+theme_config:
+  appearance: light
 plugins:
   - jekyll-remote-theme
   # - jekyll-feed
