--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ github_username:  skolyszewski
 remote_theme: riggraz/no-style-please
 theme_config:
   appearance: light
+  date_format: "%Y-%m-%d"
 plugins:
   - jekyll-remote-theme
   # - jekyll-feed
