--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,7 +4,7 @@ entries:
       - title: Grzegorz Skołyszewski
       - title: based in 🇵🇱
       - title: Systems Engineer practicing and spreading SRE and DevOps love
-      - title: 'socials:'
+      - title: socials
         entries:
           - title: GitHub
             url: https://www.github.com/skolyszewski
