--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -14,6 +14,9 @@ entries:
             url: https://www.linkedin.com/in/grzegorz-skolyszewski/
   - title: thoughts
     post_list: true
+    entries:
+      - title: 2022-10-21 How to avoid global outage - Seamlessly migrating DaemonSet labels
+        url: https://engineering.prezi.com/intro-4727024fc2c1
   - title: misc
     entries:
       - title: WTFisSRE 2022 Programme Committee member
